<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/prefs_category_feedback">

        <ListPreference
            app:defaultValue="each"
            app:entries="@array/feedback_frequency_entries"
            app:entryValues="@array/feedback_frequency_values"
            app:key="feedback_frequency"
            app:title="@string/prefs_feedback_frequency"
            app:useSimpleSummaryProvider="true" />
        <ListPreference
            app:defaultValue="4"
            app:entries="@array/feedback_hide_delay_entries"
            app:entryValues="@array/feedback_hide_delay_values"
            app:key="feedback_hide_delay"
            app:title="@string/prefs_feedback_hide_delay"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/prefs_category_advanced">

        <SwitchPreferenceCompat
            app:key="debug"
            app:summary="Monitor the acceleration graph and tweak swing physics below."
            app:title="@string/prefs_debug" />

        <EditTextPreference
            app:defaultValue="4.0"
            app:dependency="debug"
            app:key="gravity_tolerance"
            app:title="Gravity tolerance"
            app:useSimpleSummaryProvider="true" />
        <Preference
            app:dependency="debug"
            app:persistent="false"
            app:selectable="false"
            app:summary="Acceleration within earth's gravity +/- tolerance is seen as non-swing behavior. Exceeding this registers as a swing." />

        <EditTextPreference
            app:defaultValue="100"
            app:dependency="debug"
            app:key="stasis_threshold"
            app:title="Stasis threshold"
            app:useSimpleSummaryProvider="true" />
        <Preference
            app:dependency="debug"
            app:persistent="false"
            app:selectable="false"
            app:summary="When stasis lasts this long, the swing is over (sometimes there might be accelerations within a swing that are within tolerances after all)" />

        <EditTextPreference
            app:defaultValue="50"
            app:dependency="debug"
            app:key="swing_min_length"
            app:title="Swing minimum length"
            app:useSimpleSummaryProvider="true" />
        <Preference
            app:dependency="debug"
            app:persistent="false"
            app:selectable="false"
            app:summary="Minimum swing duration." />

        <EditTextPreference
            app:defaultValue="300"
            app:dependency="debug"
            app:key="swing_max_length"
            app:title="Swing maximum length"
            app:useSimpleSummaryProvider="true" />
        <Preference
            app:dependency="debug"
            app:persistent="false"
            app:selectable="false"
            app:summary="Maximum swing duration." />

        <EditTextPreference
            app:defaultValue="30.0"
            app:dependency="debug"
            app:key="swing_min_arc_height"
            app:title="Swing minimum arc height"
            app:useSimpleSummaryProvider="true" />
        <Preference
            app:dependency="debug"
            app:persistent="false"
            app:selectable="false"
            app:summary="Positive/negative deviation in z-acceleration from baseline (earth's gravity)." />

        <EditTextPreference
            app:defaultValue="400"
            app:dependency="debug"
            app:key="graph_scroll_speed"
            app:title="Graph scroll speed"
            app:useSimpleSummaryProvider="true" />
        <Preference
            app:dependency="debug"
            app:persistent="false"
            app:selectable="false"
            app:summary="Increase for slower scroll, decrease for faster scroll. Does not affect data resolution." />

    </PreferenceCategory>

</PreferenceScreen>