<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4FC3F7"
    tools:context=".activity.MainActivity">

    <Button
        android:id="@+id/buttonStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@color/button_background"
        android:drawableLeft="@android:drawable/ic_media_play"
        android:fontFamily="sans-serif-medium"
        android:text="@string/button_start_text"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textPreferences"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:letterSpacing="0.05"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:text="@string/prefs_title"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="60sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switchNotification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:fontFamily="sans-serif-medium"
        android:minHeight="60dp"
        android:paddingLeft="48dp"
        android:paddingRight="48dp"
        android:switchTextAppearance="@style/TextAppearance.AppCompat.Large"
        android:text="@string/prefs_notification"
        android:textAlignment="textStart"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/switchSpoken"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switchSpoken"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:fontFamily="sans-serif-medium"
        android:minHeight="60dp"
        android:paddingLeft="48dp"
        android:paddingRight="48dp"
        android:switchTextAppearance="@style/TextAppearance.AppCompat.Large"
        android:text="@string/prefs_spoken"
        android:textAlignment="textStart"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/switchVibration"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switchVibration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:fontFamily="sans-serif-medium"
        android:minHeight="60dp"
        android:paddingLeft="48dp"
        android:paddingRight="48dp"
        android:switchTextAppearance="@style/TextAppearance.AppCompat.Large"
        android:text="@string/prefs_vibration"
        android:textAlignment="textStart"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonAdvanced"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonAdvanced"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="64dp"
        android:backgroundTint="#4FC3F7"
        android:fontFamily="sans-serif-medium"
        android:gravity="start"
        android:letterSpacing="0"
        android:minHeight="60dp"
        android:paddingLeft="8dp"
        android:paddingTop="0dp"
        android:paddingRight="48dp"
        android:paddingBottom="0dp"
        android:text="@string/prefs_advanced"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>